<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_info_geral"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/info_geral" />

    <ImageView
        android:id="@+id/img_ubi"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ubi_fe_di" />

    <Button
        android:id="@+id/button_evento"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:shadowColor="@color/design_default_color_secondary_variant"
        android:text="@string/marcar_evento" />

    <Button
        android:id="@+id/button_ver_lista"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/lsita_de_eventos" />

    <Button
        android:id="@+id/button_ver_calendario"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ver_calend_rio" />

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:text="@string/neatcalendar_pdm_2020"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp" />

</RelativeLayout>