<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/app_background"
    tools:context=".MarcarEvento">

    <TextView
        android:id="@+id/textView_data_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="400dp"
        android:text="@string/data_de_fim"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/datePicker_data_fim"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="350dp"
        android:calendarTextColor="@color/design_default_color_on_secondary"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/textView_titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/neatcalendar_pdm_2020"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView_marcar_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/marcar_evento"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_nome_evento"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/nome_do_evento"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:textColorHint="@color/design_default_color_on_secondary" />

    <DatePicker
        android:id="@+id/datePicker_data_inicio"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="220dp"
        android:calendarTextColor="@color/design_default_color_on_secondary"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/button_marcar_evento"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/confirmar" />

    <TextView
        android:id="@+id/textView_data_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="280dp"
        android:text="@string/data_de_in_cio"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />

</RelativeLayout>